--- a/backpack/build.gradle
+++ b/backpack/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.library'
+apply from : "$project.rootDir/publishing.gradle"
 
 android {
     compileSdkVersion 21
@@ -8,8 +9,7 @@ android {
         applicationId "hr.simplesource.backpack"
         minSdkVersion 8
         targetSdkVersion 21
-        versionCode 1
-        versionName "0.1.0"
+        versionName VERSION_NAME
     }
     buildTypes {
         release {
@@ -21,6 +21,5 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:appcompat-v7:21.0.0'
     compile 'com.google.code.gson:gson:2.3'
 }
